Assignment for Java 17 task. Changes in build.gradle.kts